--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-fileupload": "^1.1.1-alpha.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "nodemailer": "^6.2.1"
   }
 }
