--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "express-fileupload": "^1.1.1-alpha.1",
     "http-errors": "~1.6.2",
+    "json-2-csv": "^3.5.5",
     "mongoose": "^5.6.2",
     "morgan": "~1.9.0",
     "nodemailer": "^6.2.1"
